--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "qc:test:periodic-change-utils": "node QC/run-periodic-change-utils.js",
     "qc:test:lookup-data": "node QC/run-lookup-data.js",
     "qc:test:qc-data": "node QC/run-qc-data.js",
-    "qc:test:budget": "node QC/tests/scenario-types/budget.test.js",
-    "qc:test:general": "node QC/tests/scenario-types/general.test.js",
-    "qc:test:funds": "node QC/tests/scenario-types/funds.test.js",
-    "qc:test:debt": "node QC/tests/scenario-types/debt-repayment.test.js",
-    "qc:test:goal-based": "node QC/tests/scenario-types/goal-based.test.js",
-    "qc:test:advanced-goal-solver": "node QC/tests/scenario-types/advanced-goal-solver.test.js",
-    "qc:test:all-scenario-types": "npm run qc:test:budget && npm run qc:test:general && npm run qc:test:funds && npm run qc:test:debt && npm run qc:test:goal-based && npm run qc:test:advanced-goal-solver",
+    "qc:test:budget": "node QC/tests/workflows/budget.test.js",
+    "qc:test:general": "node QC/tests/workflows/general.test.js",
+    "qc:test:funds": "node QC/tests/workflows/funds.test.js",
+    "qc:test:debt": "node QC/tests/workflows/debt-repayment.test.js",
+    "qc:test:goal-based": "node QC/tests/workflows/goal-based.test.js",
+    "qc:test:advanced-goal-solver": "node QC/tests/workflows/advanced-goal-solver.test.js",
+    "qc:test:all-workflows": "npm run qc:test:budget && npm run qc:test:general && npm run qc:test:funds && npm run qc:test:debt && npm run qc:test:goal-based && npm run qc:test:advanced-goal-solver",
     "qc:full": "node QC/generate-qc-report.js",
     "qc:expand": "node QC/generators/expand-qc-dataset.js",
     "qc:report": "node QC/generate-qc-report.js",
