--- a/assets/docs-manifest.json
+++ b/assets/docs-manifest.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "generatedAt": "2026-02-22T15:47:02.662Z",
+  "generatedAt": "2026-03-01T07:10:44.014Z",
   "items": [
     {
       "id": "CONCEPTS_ACCOUNTS",
@@ -18,7 +18,7 @@
     },
     {
       "id": "CONCEPTS_GOAL_PLANNING",
-      "title": "Goal Planning",
+      "title": "Goal Workshop",
       "category": "Concepts",
       "file": "Documentation/CONCEPTS_GOAL_PLANNING.md",
       "kind": "md"
@@ -101,10 +101,24 @@
       "kind": "md"
     },
     {
+      "id": "TECH_UI_STYLE_GUIDE",
+      "title": "FTrack UI Style Guide",
+      "category": "Technical",
+      "file": "Documentation/TECH_UI_STYLE_GUIDE.md",
+      "kind": "md"
+    },
+    {
       "id": "TECH_QC_METHOD",
       "title": "QC Method Summary",
       "category": "Technical",
       "file": "Documentation/TECH_QC_METHOD.md",
+      "kind": "md"
+    },
+    {
+      "id": "TECH_REFACTOR_AUDIT",
+      "title": "Refactor Audit Report",
+      "category": "Technical",
+      "file": "Documentation/TECH_REFACTOR_AUDIT.md",
       "kind": "md"
     },
     {
@@ -136,24 +150,10 @@
       "kind": "md"
     },
     {
-      "id": "TECH_WORKFLOW_REFACTOR_PHASE1_INVENTORY",
-      "title": "Workflow Refactor Phase 1 - Review Inventory",
-      "category": "Technical",
-      "file": "Documentation/TECH_WORKFLOW_REFACTOR_PHASE1_INVENTORY.md",
-      "kind": "md"
-    },
-    {
       "id": "TECH_REFACTOR_WORKFLOWS",
       "title": "Workflow-Based Scenarios Refactor",
       "category": "Technical",
       "file": "Documentation/TECH_REFACTOR_WORKFLOWS.md",
-      "kind": "md"
-    },
-    {
-      "id": "USER_ADVANCED_GOAL_SOLVER",
-      "title": "Advanced Goal Solver",
-      "category": "User",
-      "file": "Documentation/USER_ADVANCED_GOAL_SOLVER.md",
       "kind": "md"
     },
     {
@@ -199,8 +199,15 @@
       "kind": "md"
     },
     {
+      "id": "USER_ADVANCED_GOAL_SOLVER",
+      "title": "Goal Workshop — Advanced Mode",
+      "category": "User",
+      "file": "Documentation/USER_ADVANCED_GOAL_SOLVER.md",
+      "kind": "md"
+    },
+    {
       "id": "USER_GOAL_PLANNING",
-      "title": "Goal Planning",
+      "title": "Goal Workshop — Simple Mode",
       "category": "User",
       "file": "Documentation/USER_GOAL_PLANNING.md",
       "kind": "md"
