--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "qc:verify:budget": "node QC/verify.js --scenario=Budget",
     "qc:verify:funds": "node QC/verify.js --scenario=Funds",
     "qc:verify:debt": "node QC/verify.js --scenario=Debt Repayment",
-    "qc:verify:goals": "node QC/verify.js --scenario=Goal-Based",
-    "qc:verify:solver": "node QC/verify.js --scenario=Advanced Goal Solver",
+    "qc:verify:goals": "node QC/verify.js --scenario=Goal Workshop",
+    "qc:verify:solver": "node QC/verify.js --scenario=Goal Workshop",
     "qc:verify:verbose": "node QC/verify.js --scenario=General --verbose",
     "qc:test": "node QC/run-tests.js",
     "qc:test:calculation-utils": "node QC/run-calculation-utils.js",
@@ -32,9 +32,8 @@
     "qc:test:general": "node QC/tests/workflows/general.test.js",
     "qc:test:funds": "node QC/tests/workflows/funds.test.js",
     "qc:test:debt": "node QC/tests/workflows/debt-repayment.test.js",
-    "qc:test:goal-based": "node QC/tests/workflows/goal-based.test.js",
-    "qc:test:advanced-goal-solver": "node QC/tests/workflows/advanced-goal-solver.test.js",
-    "qc:test:all-workflows": "npm run qc:test:budget && npm run qc:test:general && npm run qc:test:funds && npm run qc:test:debt && npm run qc:test:goal-based && npm run qc:test:advanced-goal-solver",
+    "qc:test:goal-workshop": "node QC/tests/workflows/goal-workshop.test.js",
+    "qc:test:all-workflows": "npm run qc:test:budget && npm run qc:test:general && npm run qc:test:funds && npm run qc:test:debt && npm run qc:test:goal-workshop",
     "qc:full": "node QC/generate-qc-report.js",
     "qc:expand": "node QC/generators/expand-qc-dataset.js",
     "qc:report": "node QC/generate-qc-report.js",
